<resources>
    <string name="app_name">CoinTrackr</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="not_found">not found</string>
    <string name="empty_watchlist">empty watchlist</string>
    <string name="_1m">1 Month</string>
    <string name="_1w">1 Week</string>
    <string name="_1d">1 Day</string>
    <string name="_1h">1 Hour</string>
    <string name="_4h">4 Hour</string>
    <string name="_15m">15 Min</string>
    <string name="image">crypto currency image</string>
    <string name="app_tagline">Your Crypto Companion</string>
    <string name="app_description1">Track. Analyze.</string>
    <string name="app_description2">Stay Informed.</string>
</resources>