<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_theme_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:paddingRight="12dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/addWatchlistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="8dp"
            android:src="@drawable/ic_star_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backStackButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:background="@null"
            app:tint="@color/black_900"
            android:src="@drawable/ic_back_stack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailSymbolTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_900"
            android:textSize="20sp"
            android:fontFamily="@font/metropolis_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addWatchlistButton"
            app:layout_constraintStart_toEndOf="@+id/backStackButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="BTC" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailAppbar">

        <TextView
            android:id="@+id/detailChangeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:fontFamily="@font/metropolis_bold"
            app:layout_constraintStart_toEndOf="@+id/detailChangeImageView"
            app:layout_constraintTop_toBottomOf="@+id/detailPriceTextView"
            tools:text="2.68%" />

        <TextView
            android:id="@+id/detailPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:fontFamily="@font/metropolis_medium"
            app:layout_constraintStart_toEndOf="@+id/detailImageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="$108.56" />

        <ImageView
            android:id="@+id/detailChangeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/detailChangeTextView"
            app:layout_constraintStart_toStartOf="@+id/detailPriceTextView"
            app:layout_constraintTop_toTopOf="@+id/detailChangeTextView"
            tools:srcCompat="@drawable/ic_caret_up" />

        <ImageView
            android:id="@+id/detailImageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailPrice">

        <TextView
            android:id="@+id/button_1_month"
            android:layout_width="58dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/inactive_button"
            android:text="@string/_1m"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/black_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_1_week"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/button_1_week"
            android:layout_width="58dp"
            android:layout_height="36dp"
            android:background="@drawable/inactive_button"
            android:text="@string/_1w"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/black_900"
            app:layout_constraintBottom_toBottomOf="@+id/button_1_month"
            app:layout_constraintEnd_toStartOf="@+id/button_1_month"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_1_day"
            app:layout_constraintTop_toTopOf="@+id/button_1_month" />

        <TextView
            android:id="@+id/button_1_day"
            android:layout_width="58dp"
            android:layout_height="36dp"
            android:background="@drawable/active_button"
            android:text="@string/_1d"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/button_1_week"
            app:layout_constraintEnd_toStartOf="@+id/button_1_week"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_4_hr"
            app:layout_constraintTop_toTopOf="@+id/button_1_week" />

        <TextView
            android:id="@+id/button_4_hr"
            android:layout_width="58dp"
            android:layout_height="36dp"
            android:background="@drawable/inactive_button"
            android:text="@string/_4h"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/black_900"
            app:layout_constraintBottom_toBottomOf="@+id/button_1_day"
            app:layout_constraintEnd_toStartOf="@+id/button_1_day"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_1_hr"
            app:layout_constraintTop_toTopOf="@+id/button_1_day" />

        <TextView
            android:id="@+id/button_1_hr"
            android:layout_width="58dp"
            android:layout_height="36dp"
            android:background="@drawable/inactive_button"
            android:text="@string/_1h"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/black_900"
            app:layout_constraintBottom_toBottomOf="@+id/button_4_hr"
            app:layout_constraintEnd_toStartOf="@+id/button_4_hr"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_15_min"
            app:layout_constraintTop_toTopOf="@+id/button_4_hr" />

        <TextView
            android:id="@+id/button_15_min"
            android:layout_width="58dp"
            android:layout_height="36dp"
            android:background="@drawable/inactive_button"
            android:text="@string/_15m"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="@color/black_900"
            app:layout_constraintBottom_toBottomOf="@+id/button_1_hr"
            app:layout_constraintEnd_toStartOf="@+id/button_1_hr"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_1_hr" />

        <WebView
            android:id="@+id/detaillChartWebView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_1_month" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>